--- a/wp-content/themes/ztindia/resources/scss/abstracts/_variables.scss
+++ b/wp-content/themes/ztindia/resources/scss/abstracts/_variables.scss
@@ -1,1 +1,26 @@
-$font-family-base:  "Sans Serif", serif;
+// FONTS
+$font_primary: 'Bw Nista Grotesk DEMO';
+$font_secondary: 'Brown';
+
+// COLORS
+$black: #000000;
+$white: #ffffff;
+
+// Main Colors
+$dark_blue: #2972E0;
+$dark_green: #198171;
+$dark_red: #CE4148;
+
+$color_text: #03030f;
+$red: #be1310;
+$orange: #ed501b;
+
+$soft_blue: #e3f5fd;
+$soft_orange: #fbbe95;
+
+
+// Other Colors
+$grey: #767676;
+
+
+$default-shadow: 0px 9.57191px 31.9064px rgba(84, 150, 179, 0.2);
