service + service cat page update

--- a/wp-content/themes/zts-india/resources/scss/layout/_common.scss
+++ b/wp-content/themes/zts-india/resources/scss/layout/_common.scss
@@ -46,6 +46,9 @@ a {
 .pb-60 {
     padding-bottom: 60px;
 }
+.bg-grey {
+    background: #f4f4f4;
+}
 .section-title {
     max-width: 785px;
     margin: 0 auto 45px;
