--- a/wp-content/themes/zts-india/resources/scss/layout/_buttons.scss
+++ b/wp-content/themes/zts-india/resources/scss/layout/_buttons.scss
@@ -14,6 +14,7 @@
     outline: none;
     font-weight: 500;
     @include transition(all 0.4s ease);
+    border: 1px solid transparent;
     &.btn-2x {
         padding: 15px 40px;
         font-size: 16px;
