--- a/wp-content/themes/zts-india/resources/scss/pages/_homepage.scss
+++ b/wp-content/themes/zts-india/resources/scss/pages/_homepage.scss
@@ -102,6 +102,33 @@
 			}
 		}
 	}
+	&.style-2 {
+		.card-inner {
+			background: transparent;
+			position: relative;
+			padding: 0;
+			border: 0;
+			// padding-left: 90px;
+			box-shadow: unset;
+			.card-image {
+				text-align: left;
+				img {
+					height: 60px;
+					margin: 0 0 20px;
+				}
+			}
+			.card-content {
+				display: block;
+				text-align: left;
+				h3 {
+
+				}
+				p {
+					line-height: 1.77;
+				}
+			}
+		}
+	}
 }
 .clients-section {
 	padding: 60px 0;
@@ -392,12 +419,36 @@
 	.container-wrapper {
 		padding-right: calc((100vw - 1270px) / 2);
 	}
-	.why-choose-image {		
+	.why-choose-image {
 		left: -15px;
 		img {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+		}
+	}
+	&.image-right {
+		.container-wrapper {
+			padding-right: 0;
+			padding-left: calc((100vw - 1270px) / 2);
+			.row {
+				.col-lg-6 {
+					&:first-child {
+						order: 2;
+					}
+					&:last-child {
+						order: 1;
+					}
+				}
+			}
+			.why-choose-image {
+				left: 15px;
+			}
+			.why-choose-content {
+				margin: 0;
+				max-width: 100%;
+				
+			}
 		}
 	}
 }
