--- a/wp-content/themes/zts-india/resources/scss/pages/_services.scss
+++ b/wp-content/themes/zts-india/resources/scss/pages/_services.scss
@@ -1,4 +1,69 @@
+.service-banner {
+    background-size: cover;
+    position: relative;
+    &:before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        height: 100%;
+        width: 70%;
+        background-image: linear-gradient(to right, $red, transparent);
+    }
+    .intro-content {
+        padding: 60px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        min-height: 400px;
+        position: relative;
+        z-index: 1;
+        h1 {
+            color: $white;
+            margin: 0 0 25px;
+        }
+        .breadcrumbs {
+            ul {
+                margin: 0;
+                padding: 0;
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                li {
+                    list-style: none;
+                    opacity: 1;
+                    position: relative;
+                    padding-right: 10px;
+                    &:after {
+                        content: '/';
+                        margin-left: 10px;
+                    }
+                    &:last-child {
+                        opacity: 0.6;
+                        &:after {
+                            content: none;
+                        }
+                    }
+                    a {
+                        @include transition(0.4s);
+                        font-weight: 500;
+                        &:hover {
+                            color: $dark_grey;
+                        }
+                    }
+                }
+                li, a {
+                    color: $white;
+                    font-size: 18px;
+                    font-family: $font_rubik;
+                }
+            }
+        }
+    }
+}
+
 .service-intro-banner {
+    display: none;
     padding: 60px 0;
     background: rgba($grey, 0.2);
     .intro-wrapper {
@@ -41,10 +106,9 @@
 .service-cat-section {
     padding: 80px 0;
     .service-cat-wrap {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 0 -20px;
+        // display: flex;
+        // flex-wrap: wrap;
+        // justify-content: center;
         .category-listing {
             flex: 0 0 50%;
             max-width: 50%;
@@ -127,6 +191,257 @@
             &:nth-child(4n) {
                 .category-inner {
                     background: rgba($dark_green, 0.1);
+                }
+            }
+        }
+        .category-list {
+            padding: 40px 50px;
+            background: #f7f7f7;
+            &:not(:last-child) {
+                margin: 0 0 30px;
+            }
+            .category-image {
+                text-align: center;
+                padding: 30px;
+                background: $white;
+                box-shadow: $default_shadow;
+                a {
+                    display: block;
+                    width: 50%;
+                    margin: 0 auto;
+                    img {
+                        width: 100%;
+                    }
+                }
+            }
+            .category-detail {
+                .category-info {
+                    h3 {
+                        margin: 0 0 20px;
+                        a {
+                            @include transition(0.4s);
+                            &:hover {
+                                color: $red;
+                            }
+                        }
+                    }
+                    p {
+                        color: $dark_grey;
+                    }
+                }
+                .services-list {
+                    padding: 10px 0 0;
+                    h5 {
+                        text-transform: uppercase;
+                        text-decoration: underline;
+                        text-underline-position: under;
+                        font-size: 16px;
+                        margin: 0 0 20px;
+                    }
+                    ul {
+                        display: flex;
+                        flex-wrap: wrap;
+                        margin: 0 -15px;
+                        li {
+                            margin: 0 0 13px;
+                            padding: 0 15px;
+                            flex: 0 0 50%;
+                            max-width: 50%;
+                            &:last-child {
+                                margin-right: 0;
+                            }
+                            a {
+                                color: $navy_blue;
+                                @include transition(0.4s);
+                                padding-left: 15px;
+                                position: relative;
+                                &:before {
+                                    content: '';
+                                    position: absolute;
+                                    top: 4px;
+                                    left: 0;
+                                    height: 12px;
+                                    width: 12px;
+                                    background-image: url('../../images/dropdown-arrow-right-red.svg');
+                                    background-size: contain;
+                                    background-repeat: no-repeat;
+                                }
+                                &:hover {
+                                    color: $red;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.service-cat-banner {
+    padding: 100px 0 60px;
+    .banner-content {
+        h1 {
+            margin: 0 0 20px;
+        }
+        .content-inner {
+            display: flex;
+            align-items: center;
+            h2 {
+                max-width: 75%;
+                color: $red;
+                padding-right: 30px;
+            }
+            img {
+                width: 150px;
+            }
+        }
+    }
+}
+.services-section-two {
+    background: #f4f4f4;
+    padding: 60px 0;
+    .row {
+        .col-lg-4 {
+            margin: 0 0 50px;
+        }
+    }
+}
+.why-chooses-service-section {
+    padding: 60px 0;
+    .section-title {
+        padding: 0 0 20px;
+    }
+    .row {
+        .col-lg-6 {
+            margin: 0 0 30px;
+        }
+    }
+    .content-block {
+        padding: 0 45px 0 0;
+        .content-title {
+            margin: 0 0 10px;
+            h5 {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                font-weight: 700;
+                margin: 0;
+                img, svg {
+                    width: 45px;
+                    height: 45px;
+                    margin-right: 15px;
+                    path {
+                        fill: $navy_blue;
+                    }
+                }
+            }
+        }
+        .content-desc {
+            p {
+                line-height: 1.77;
+            }
+        }
+    }
+}
+.section-zig-zac {
+    padding: 60px 0;
+    .section-title {
+        padding: 0 0 20px;
+    }
+    .zig-zac-wrapper {
+        .row {
+            &:not(:last-child) {
+                margin: 0 0 45px;
+            }
+            &:nth-child(even) {
+                .col-lg-6 {
+                    &:first-child {
+                        order: 2;
+                    }
+                    &:last-child {
+                        order: 1;
+                    }
+                }
+            }
+        }
+        .image-block {
+            overflow: hidden;
+            img {
+                width: 100%;
+                transform: scale(1);
+                @include transition(0.6s);
+            }
+            &:hover {
+                img {
+                    transform: scale(1.1);
+                }
+            }
+        }
+        .content-block {
+            .content-inner {
+                h3 {
+                    margin: 0 0 20px;
+                }
+                p {
+                    line-height: 1.77;
+                }
+                .button-wrap {
+                    padding-top: 15px;
+                    .btn {
+                        &:not(:last-child) {
+                            margin-right: 10px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+.section-logo-platform {
+    padding: 60px 0;
+    .logo-wrapper {
+        .logo-slider {
+            .slick-track {
+                display: flex;
+                align-items: center;
+            }
+            .logo-block {
+                padding: 0 10px;
+                .block-inner {
+                    display: inline-flex;
+                    align-items: center;
+                    height: 100%;
+                    img {
+
+                    }
+                }
+            }
+            .slick-dots {
+                text-align: center;
+                li {
+                    display: inline-block;
+                    margin: 0 0 0 10px;
+                    button {
+                        width: 10px;
+                        height: 10px;
+                        background-color: rgba(30, 30, 34, 0.2);
+                        border: 2px solid;
+                        border-color: transparent;
+                        transition: all 500ms ease;
+                        opacity: 1;
+                        margin: 0;
+                        display: block;
+                        font-size: 0;
+                        border-radius: 50%;
+                        padding: 0;
+                    }
+                    &.slick-active {
+                        button {
+                            background-color: transparent;
+                            border-color: $red;
+                        }
+                    }
                 }
             }
         }
