--- a/wp-content/themes/zts-india/resources/scss/pages/_services.scss
+++ b/wp-content/themes/zts-india/resources/scss/pages/_services.scss
@@ -1,6 +1,7 @@
 .service-banner {
     background-size: cover;
     position: relative;
+
     &:before {
         content: '';
         position: absolute;
@@ -10,6 +11,7 @@
         width: 70%;
         background-image: linear-gradient(to right, $red, transparent);
     }
+
     .intro-content {
         padding: 60px 0;
         display: flex;
@@ -18,10 +20,12 @@
         min-height: 400px;
         position: relative;
         z-index: 1;
+
         h1 {
             color: $white;
             margin: 0 0 25px;
         }
+
         .breadcrumbs {
             ul {
                 margin: 0;
@@ -29,30 +33,38 @@
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
+
                 li {
                     list-style: none;
                     opacity: 1;
                     position: relative;
                     padding-right: 10px;
+
                     &:after {
                         content: '/';
                         margin-left: 10px;
                     }
+
                     &:last-child {
                         opacity: 0.6;
+
                         &:after {
                             content: none;
                         }
                     }
+
                     a {
                         @include transition(0.4s);
                         font-weight: 500;
+
                         &:hover {
                             color: $dark_grey;
                         }
                     }
                 }
-                li, a {
+
+                li,
+                a {
                     color: $white;
                     font-size: 18px;
                     font-family: $font_rubik;
@@ -66,36 +78,49 @@
     display: none;
     padding: 60px 0;
     background: rgba($grey, 0.2);
+
     .intro-wrapper {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
+
         .intro-content {
             flex: 0 0 60%;
             max-width: 50%;
             padding-right: 35px;
+
             .content-inner {
-                h2, h3, p {
+
+                h2,
+                h3,
+                p {
                     color: $black;
                 }
-                h2, h3 {
+
+                h2,
+                h3 {
                     margin: 0 0 30px;
                 }
+
                 p {
                     margin: 0;
                     line-height: 1.77;
+
                     a {
                         color: $purple;
+
                         &:hover {
                             text-decoration: underline;
                         }
                     }
                 }
+
                 .button-wrap {
                     padding-top: 30px;
                 }
             }
         }
+
         .intro-media {
             flex: 0 0 40%;
             max-width: 40%;
@@ -105,7 +130,9 @@
 
 .service-cat-section {
     padding: 80px 0;
+
     .service-cat-wrap {
+
         // display: flex;
         // flex-wrap: wrap;
         // justify-content: center;
@@ -114,29 +141,35 @@
             max-width: 50%;
             padding: 0 20px;
             margin: 0 0 145px;
+
             .category-inner {
                 width: 100%;
                 border-radius: 16px;
                 padding: 55px 50px 0;
                 height: 455px;
                 text-align: center;
+
                 .category-image {
                     margin: 0 0 20px;
+
                     img {
                         width: 64px;
                         height: 64px;
                     }
                 }
+
                 .category-info {
                     h3 {
                         margin: 0 0 15px;
                     }
+
                     p {
                         font-size: 14px;
                         line-height: 1.77;
                         color: #475467;
                     }
                 }
+
                 .service-cat-listing {
                     margin-top: 30px;
                     background: $white;
@@ -144,21 +177,25 @@
                     border-radius: 16px;
                     padding: 30px;
                     @include transition(0.4s);
+
                     .service-list-inner {
                         h5 {
                             margin: 0 0 15px;
                             font-weight: 700;
                             text-transform: uppercase;
                         }
+
                         ul {
                             li {
                                 &:not(:last-child) {
                                     margin: 0 0 10px;
                                 }
+
                                 a {
                                     color: $dark_grey;
                                     font-weight: 500;
                                     @include transition(0.4s);
+
                                     &:hover {
                                         color: $red;
                                     }
@@ -167,70 +204,86 @@
                         }
                     }
                 }
+
                 &:hover {
                     .service-cat-listing {
                         transform: translateY(-15px);
                     }
                 }
             }
+
             &:nth-child(4n+1) {
                 .category-inner {
                     background: rgba($dark_blue, 0.1);
                 }
             }
+
             &:nth-child(4n+2) {
                 .category-inner {
                     background: rgba($dark_grey, 0.1);
                 }
             }
+
             &:nth-child(4n+3) {
                 .category-inner {
                     background: rgba($red, 0.1);
                 }
             }
+
             &:nth-child(4n) {
                 .category-inner {
                     background: rgba($dark_green, 0.1);
                 }
             }
         }
+
         .category-list {
             padding: 40px 50px;
             background: #f7f7f7;
+
             &:not(:last-child) {
                 margin: 0 0 30px;
             }
+
             .category-image {
                 text-align: center;
                 padding: 30px;
                 background: $white;
                 box-shadow: $default_shadow;
+
                 a {
                     display: block;
                     width: 50%;
                     margin: 0 auto;
+
                     img {
                         width: 100%;
                     }
                 }
             }
+
             .category-detail {
                 .category-info {
                     h3 {
                         margin: 0 0 20px;
+
                         a {
                             @include transition(0.4s);
+
                             &:hover {
                                 color: $red;
                             }
                         }
                     }
+
                     p {
                         color: $dark_grey;
                     }
                 }
+
                 .services-list {
                     padding: 10px 0 0;
+
                     h5 {
                         text-transform: uppercase;
                         text-decoration: underline;
@@ -238,23 +291,28 @@
                         font-size: 16px;
                         margin: 0 0 20px;
                     }
+
                     ul {
                         display: flex;
                         flex-wrap: wrap;
                         margin: 0 -15px;
+
                         li {
                             margin: 0 0 13px;
                             padding: 0 15px;
                             flex: 0 0 50%;
                             max-width: 50%;
+
                             &:last-child {
                                 margin-right: 0;
                             }
+
                             a {
                                 color: $navy_blue;
                                 @include transition(0.4s);
                                 padding-left: 15px;
                                 position: relative;
+
                                 &:before {
                                     content: '';
                                     position: absolute;
@@ -266,6 +324,7 @@
                                     background-size: contain;
                                     background-repeat: no-repeat;
                                 }
+
                                 &:hover {
                                     color: $red;
                                 }
@@ -280,63 +339,82 @@
 
 .service-cat-banner {
     padding: 100px 0 60px;
+
     .banner-content {
         h1 {
             margin: 0 0 20px;
         }
+
         .content-inner {
             display: flex;
             align-items: center;
+
             h2 {
                 max-width: 75%;
                 color: $red;
                 padding-right: 30px;
             }
+
             img {
                 width: 150px;
             }
         }
     }
 }
+
 .services-section-two {
     background: #f4f4f4;
     padding: 60px 0;
+
     .row {
+        margin: 0 -30px;
+
         .col-lg-4 {
             margin: 0 0 50px;
+            padding: 0 30px;
         }
     }
 }
+
 .why-chooses-service-section {
     padding: 60px 0;
+
     .section-title {
         padding: 0 0 20px;
     }
+
     .row {
         .col-lg-6 {
             margin: 0 0 30px;
         }
     }
+
     .content-block {
         padding: 0 45px 0 0;
+
         .content-title {
             margin: 0 0 10px;
+
             h5 {
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
                 font-weight: 700;
                 margin: 0;
-                img, svg {
+
+                img,
+                svg {
                     width: 45px;
                     height: 45px;
                     margin-right: 15px;
+
                     path {
                         fill: $navy_blue;
                     }
                 }
             }
         }
+
         .content-desc {
             p {
                 line-height: 1.77;
@@ -344,50 +422,64 @@
         }
     }
 }
+
+.portfolio-section,
 .section-zig-zac {
     padding: 60px 0;
+
     .section-title {
         padding: 0 0 20px;
     }
+
+    .portfolio-wrapper,
     .zig-zac-wrapper {
         .row {
             &:not(:last-child) {
                 margin: 0 0 45px;
             }
+
             &:nth-child(even) {
                 .col-lg-6 {
                     &:first-child {
                         order: 2;
                     }
+
                     &:last-child {
                         order: 1;
                     }
                 }
             }
         }
+
         .image-block {
             overflow: hidden;
+
             img {
                 width: 100%;
                 transform: scale(1);
                 @include transition(0.6s);
             }
+
             &:hover {
                 img {
                     transform: scale(1.1);
                 }
             }
         }
+
         .content-block {
             .content-inner {
                 h3 {
                     margin: 0 0 20px;
                 }
+
                 p {
                     line-height: 1.77;
                 }
+
                 .button-wrap {
                     padding-top: 15px;
+
                     .btn {
                         &:not(:last-child) {
                             margin-right: 10px;
@@ -398,30 +490,60 @@
         }
     }
 }
+
+.section-zig-zac {
+    .zig-zac-wrapper {
+        .row {
+            .content-block {
+                .content-inner {
+                    width: 80%;
+
+                    h5 {
+                        color: $red;
+                    }
+                }
+            }
+
+            &:nth-child(even) {
+                .content-block {
+                    .content-inner {
+                        margin-left: auto;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .section-logo-platform {
     padding: 60px 0;
+
     .logo-wrapper {
         .logo-slider {
             .slick-track {
                 display: flex;
                 align-items: center;
             }
+
             .logo-block {
                 padding: 0 10px;
+
                 .block-inner {
                     display: inline-flex;
                     align-items: center;
                     height: 100%;
-                    img {
 
-                    }
+                    img {}
                 }
             }
+
             .slick-dots {
                 text-align: center;
+
                 li {
                     display: inline-block;
                     margin: 0 0 0 10px;
+
                     button {
                         width: 10px;
                         height: 10px;
@@ -436,11 +558,156 @@
                         border-radius: 50%;
                         padding: 0;
                     }
+
                     &.slick-active {
                         button {
                             background-color: transparent;
                             border-color: $red;
                         }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.left-content-right-image {
+    background: linear-gradient(rgba($grey, 0.1) 70%, transparent 100%);
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 70px;
+    }
+
+    .row {
+        align-items: center;
+    }
+
+    .content-left {
+        .about-content {
+
+            h2,
+            h3 {
+                margin: 0 0 30px;
+            }
+
+            p {
+                &:last-child {
+                    margin: 0;
+                }
+            }
+        }
+    }
+}
+
+.faq-list-section {
+    background: linear-gradient(to top, rgba($grey, 0.1) 70%, transparent 100%);
+}
+
+.faq-list {
+    border: 1px solid #dde1ff;
+    margin: 0 0 16px;
+    border-radius: 4px;
+    position: relative;
+    box-shadow: 0 8px 24px rgba(86, 103, 255, 0.1);
+    @include transition(0.4s);
+    padding: 17px 0 15px 24px;
+
+    button {
+        color: #130056;
+        width: 100%;
+        font-size: 18px;
+        line-height: 1.44;
+        letter-spacing: .2px;
+        text-align: left;
+        padding: 0 54px 0 0;
+        font-weight: 500;
+        border: 0;
+        background: transparent;
+
+        &:after {
+            content: "";
+            position: absolute;
+            top: 17px;
+            right: 22px;
+            height: 26px;
+            width: 15px;
+            background-image: url(../../images/icon-plus.svg);
+            background-repeat: no-repeat;
+            background-size: contain;
+            @include transition(0.4s);
+        }
+    }
+
+    .faq-content {
+        display: none;
+        padding: 17px 23px 0 0;
+    }
+
+    &.faq-open {
+        border-color: $purple;
+        background: rgba($purple, .1);
+
+        button {
+            &:after {
+                transform: rotate(45deg);
+            }
+        }
+
+        .faq-content {
+            display: block;
+        }
+    }
+}
+
+body {
+    &.page-template-tpl-service-detail {
+        .services-section-two {
+            background: $white;
+            padding-bottom: 20px;
+        }
+
+        .portfolio-section {
+            background: rgba($grey, 0.1);
+
+            .portfolio-wrapper {
+                .row {
+                    display: flex;
+
+                    &:nth-child(even) {
+                        .col-lg-6 {
+                            &:first-child {
+                                order: 1 !important;
+                            }
+
+                            &:last-child {
+                                order: 2 !important;
+                            }
+                        }
+                    }
+                }
+
+                .slick-arrow {
+                    position: absolute;
+                    top: 50%;
+                    padding: 0;
+                    background-color: transparent;
+                    border: 0;
+                    height: 60px;
+                    width: 60px;
+                    background-image: url(../../images/arrow-down-thin.svg);
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    font-size: 0px;
+                    z-index: 1;
+                    transform: translateY(-50%) rotate(90deg);
+
+                    &.slick-prev {
+                        left: -60px;
+                    }
+
+                    &.slick-next {
+                        transform: translateY(-50%) rotate(-90deg);
+                        right: -60px;
                     }
                 }
             }
