--- a/wp-content/themes/zts-india/resources/scss/main.scss
+++ b/wp-content/themes/zts-india/resources/scss/main.scss
@@ -32,6 +32,8 @@
 //page (page-specific styles)
 @import "pages/homepage";
 @import "pages/services";
+@import "pages/contact";
+@import "pages/default";
 
 
 //themes
