--- a/wp-content/themes/zts-india/resources/scss/components/_navigation.scss
+++ b/wp-content/themes/zts-india/resources/scss/components/_navigation.scss
@@ -51,6 +51,11 @@
           color: $red;
         }
       }
+      &.current-menu-item {
+        > a {
+          font-weight: 600;
+        }
+      }
     }
   }
 }
