--- a/wp-content/themes/zts-india/resources/scss/pages/_homepage.scss
+++ b/wp-content/themes/zts-india/resources/scss/pages/_homepage.scss
@@ -1,6 +1,7 @@
 .hero-banner {
 	position: relative;
 	padding: 80px 0;
+
 	.banner-content {
 		display: flex;
 		flex-direction: column;
@@ -8,32 +9,38 @@
 		align-items: flex-start;
 		padding: 60px 0;
 		max-width: 695px;
+
 		h4 {
 			background: $soft_blue;
 			color: $black;
 			display: inline-block;
 			padding: 5px 15px 8px;
 		}
+
 		h1 {
 			margin: 0 0 30px;
 			font-weight: 300;
 			color: $color_text;
+
 			strong {
 				font-weight: 500;
 			}
+
 			span {
 				font-weight: 500;
 				color: $red;
-				border-right: solid $red 7px; 
+				border-right: solid $red 7px;
 				animation: cursor 1s ease-in-out infinite;
 			}
 		}
+
 		p {
 			font-size: 22px;
 			max-width: 750px;
 			margin: 0 0 25px;
-		}		
+		}
 	}
+
 	.banner-trans {
 		position: absolute;
 		top: 0;
@@ -43,6 +50,7 @@
 		width: 600px;
 		min-height: 500px;
 		height: calc(100% - 40px);
+
 		img {
 			width: 100%;
 			height: 100%;
@@ -51,6 +59,7 @@
 		}
 	}
 }
+
 .service-card {
 	.card-inner {
 		background: $white;
@@ -58,41 +67,51 @@
 		padding: 60px 40px;
 		border-radius: 7px;
 		margin-bottom: 30px;
-		border: 1px solid #eeeff1;				
+		border: 1px solid #eeeff1;
+
 		.card-image {
 			text-align: center;
+
 			img {
 				margin: 0 0 30px;
 			}
 		}
+
 		.card-content {
 			text-align: center;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
-			h3, p {
+
+			h3,
+			p {
 				margin: 0 0 20px;
 			}
+
 			h3 {
 				font-weight: 700;
+
 				@media screen and (min-width: 1200px) {
 					font-size: 26px;
 				}
+
 				a {
 					@include transition(0.4s);
 				}
 			}
+
 			p {
 				line-height: 2;
 				color: $color_text;
 				font-size: 16px;
 			}
-			.button-wrap {
 
-			}
+			.button-wrap {}
 		}
+
 		&:hover {
-			box-shadow: 20px 0 60px rgba(14, 27, 56,0.15);
+			box-shadow: 20px 0 60px rgba(14, 27, 56, 0.15);
+
 			.card-content {
 				h3 {
 					a {
@@ -102,8 +121,10 @@
 			}
 		}
 	}
+
 	&.style-2 {
 		height: 100%;
+
 		.card-inner {
 			background: transparent;
 			position: relative;
@@ -112,23 +133,26 @@
 			height: 100%;
 			box-shadow: unset;
 			margin: 0;
+
 			.card-image {
 				text-align: left;
+
 				img {
 					width: auto;
 					height: 60px;
 					margin: 0 0 20px;
 				}
 			}
+
 			.card-content {
 				display: flex;
 				flex-direction: column;
 				justify-content: space-between;
 				text-align: left;
 				height: 100%;
-				h3 {
 
-				}
+				h3 {}
+
 				p {
 					line-height: 1.77;
 					margin: 0;
@@ -137,23 +161,28 @@
 		}
 	}
 }
+
 .clients-section {
 	padding: 60px 0;
-	background: rgba($grey, 0.05);
+	background: rgba($grey, 0.07);
+
 	.clients-logo-wrap {
 		.section-title {
 			margin-left: 0;
 			text-align: left;
 			max-width: 100%;
+
 			h3 {
 				color: $color_text;
 				font-weight: 500;
 				position: relative;
 				display: inline-block;
 				padding-left: 55px;
+
 				@media screen and (min-width: 1200px) {
 					font-size: 26px;
 				}
+
 				&:after {
 					content: '';
 					position: absolute;
@@ -166,18 +195,22 @@
 				}
 			}
 		}
+
 		.clients-slider {
 			.client-logo {
 				padding: 0 15px;
+
 				a {
 					display: block;
 					text-align: center;
+
 					img {
 						padding: 10px 0;
 						margin: 0 auto;
 						@include transition(0.5s);
 						transform: scale(1);
 					}
+
 					&:hover {
 						img {
 							transform: scale(1.1);
@@ -192,89 +225,111 @@
 .home-about-section,
 .left-content-right-image {
 	background-color: rgba($grey, 0.1);
-	padding: 100px 0 60px;	
+	padding: 100px 0 60px;
+
 	.content-left {
 		padding-left: calc((100vw - 1285px) / 2);
+
 		.section-title {
 			text-align: left;
 			margin-left: 0;
 			margin-bottom: 35px;
+
 			h5 {
 				padding-left: 0;
+
 				&:before {
 					content: none;
 				}
-			}			
+			}
 		}
+
 		.about-content {
 			p {
 				font-size: 18px;
 				line-height: 1.55;
 				margin: 0 0 20px;
-			}			
+			}
 		}
+
 		.button-wrap {
 			padding-top: 20px;
 		}
 	}
+
 	.company-stats {
 		padding-left: 45px;
 		padding-right: 15px;
+
 		.col-lg-6 {
 			margin: 0 0 20px;
+
 			&:nth-child(2) {
 				.stats-box {
 					margin-top: 100px;
 				}
 			}
+
 			&:nth-child(odd) {
 				.stats-box {
 					margin-top: -100px;
 				}
 			}
+
 			&:first-child {
 				.stats-box {
 					margin-top: 0;
 				}
 			}
 		}
+
 		.stats-box {
 			border-radius: 14px;
 			padding: 40px 30px;
 			min-height: 320px;
 			background-color: $white;
 			@include transition(0.4s);
-			.sub-heading, h2 {
+
+			.sub-heading,
+			h2 {
 				margin: 0 0 20px;
 			}
+
 			.sub-heading {
 				display: block;
 			}
-			h2 {				
+
+			h2 {
 				color: $color_text;
+
 				span {
 					font-weight: 900;
 					color: $color_text;
 				}
 			}
+
 			p {
 				// font-size: 18px;
 				color: $color_text;
 			}
+
 			&:hover {
 				box-shadow: 0 10px 15px 0 rgba(241, 99, 52, 0.1)
 			}
 		}
 	}
 }
+
 .service-cat-section {
 	padding-bottom: 40px;
+
 	.row {
 		.col-lg-4 {
 			margin: 0 0 30px;
 		}
 	}
 }
+
 .service-cat-card {
 	.card-inner {
 		padding: 30px 20px;
@@ -284,6 +339,7 @@
 		@include transition(all 0.3s ease-out 0s);
 		border: 1px solid rgba($grey, 0.25);
 		background: $white;
+
 		&:before {
 			position: absolute;
 			content: '';
@@ -299,8 +355,10 @@
 			opacity: 0;
 			@include transition(all 0.3s ease-out 0s);
 		}
+
 		.card-image {
 			margin: 0 0 20px;
+
 			img {
 				width: 80px;
 				margin: 0 auto;
@@ -309,30 +367,37 @@
 				@include transition(0.4s);
 			}
 		}
+
 		.card-content {
 			text-align: center;
+
 			h4 {
 				margin: 0 0 15px;
 				color: $navy_blue;
 				font-weight: 700;
 			}
+
 			h5 {
 				color: $color_text;
+
 				span {
 					color: $red;
 					font-weight: 700;
 				}
 			}
+
 			.features {
 				padding: 15px 0 0;
 				text-align: left;
 				margin: 0 0 30px;
+
 				ul {
 					li {
 						position: relative;
 						padding-left: 20px;
 						line-height: 1.77;
 						color: $color_text;
+
 						&:before {
 							content: '';
 							position: absolute;
@@ -347,17 +412,20 @@
 				}
 			}
 		}
+
 		&:hover {
 			&:before {
 				transform: rotate(-6.05deg);
 				visibility: visible;
 				opacity: 0.85;
 			}
+
 			.card-image {
 				img {
 					transform: translateY(-10px);
 				}
 			}
+
 			.card-content {
 				.three-dot {
 					span {
@@ -368,22 +436,27 @@
 		}
 	}
 }
+
 .why-choose-us,
 .faq-section {
 	padding: 80px 15px;
 	overflow: hidden;
+
 	.why-choose-content,
 	.faq-content {
 		max-width: 600px;
-		margin: 0 0 0 auto;		
-		.list-content {			
+		margin: 0 0 0 auto;
+
+		.list-content {
 			ul {
 				li {
 					padding-left: 40px;
 					position: relative;
+
 					&:not(:last-child) {
 						margin: 0 0 25px;
 					}
+
 					&:before {
 						content: '';
 						position: absolute;
@@ -395,6 +468,7 @@
 						background-size: contain;
 						background-repeat: no-repeat;
 					}
+
 					h5 {
 						font-size: 20px;
 						color: $navy_blue;
@@ -403,56 +477,74 @@
 				}
 			}
 		}
+
+		p {
+			font-size: 18px;
+			line-height: 1.55;
+			margin: 0 0 20px;
+		}
 	}
+
 	.faq-image,
 	.why-choose-image {
 		width: calc(100% + 15px);
 		position: relative;
 	}
 }
+
 .why-choose-us {
 	.container-wrapper {
 		padding-right: calc((100vw - 1270px) / 2);
 	}
+
 	.why-choose-image {
 		left: -15px;
+
 		img {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
 		}
 	}
+
 	&.image-right {
 		.container-wrapper {
 			padding-right: 0;
 			padding-left: calc((100vw - 1270px) / 2);
+
 			.row {
 				.col-lg-6 {
 					&:first-child {
 						order: 2;
 					}
+
 					&:last-child {
 						order: 1;
 					}
 				}
 			}
+
 			.why-choose-image {
 				left: 15px;
 			}
+
 			.why-choose-content {
 				margin: 0;
 				max-width: 100%;
-				
+
 			}
 		}
 	}
 }
+
 .faq-section {
 	.container-wrapper {
 		padding-left: calc((100vw - 1270px) / 2);
 	}
+
 	.faq-image {
 		text-align: right;
+
 		// right: -15px;
 		img {
 			width: 100%;
@@ -460,13 +552,16 @@
 			object-fit: cover;
 		}
 	}
+
 	.faq-content {
 		margin-left: 0;
+
 		.accordion-wrap {
 			.accordion-list {
 				&:not(:last-child) {
 					margin: 0 0 20px;
 				}
+
 				.title {
 					h4 {
 						color: $navy_blue;
@@ -474,9 +569,11 @@
 						margin: 0;
 						cursor: pointer;
 						padding-left: 30px;
+
 						@media screen and (min-width: 1200px) {
 							font-size: 20px;
 						}
+
 						&:before,
 						&:after {
 							content: '';
@@ -484,12 +581,14 @@
 							background: $navy_blue;
 							@include transition(0.4s);
 						}
+
 						&:before {
 							top: 12px;
 							left: 0px;
 							height: 2px;
 							width: 17px;
 						}
+
 						&:after {
 							left: 8px;
 							top: 4px;
@@ -498,24 +597,28 @@
 						}
 					}
 				}
+
 				.content {
 					padding: 15px 0 20px 30px;
 					display: none;
+
 					p {
 						margin: 5px 0;
 						line-height: 1.77;
 					}
 				}
+
 				.title {
 					h4 {
 						&.icon-open {
 							text-decoration: underline;
 							color: $red;
+
 							&:after {
 								opacity: 0;
 								visiblity: hidden;
-							} 
-						}          
+							}
+						}
 					}
 				}
 			}
@@ -523,18 +626,22 @@
 	}
 }
 
-.our-work-section {	
+.our-work-section {
 	.project-wrapper {
 		padding-bottom: 20px;
+
 		.project-filter {
 			padding: 0 0 40px;
+
 			ul {
 				display: flex;
 				flex-wrap: wrap;
 				align-items: center;
 				justify-content: center;
+
 				li {
 					position: relative;
+
 					&:after {
 						position: absolute;
 						content: "/";
@@ -544,11 +651,13 @@
 						margin: auto 0;
 						color: #4b4b4b;
 					}
+
 					&:last-child {
 						&:after {
 							content: none;
 						}
 					}
+
 					a {
 						display: inline-block;
 						cursor: pointer;
@@ -557,6 +666,7 @@
 						font-weight: 400;
 						font-size: 18px;
 						padding: 0 32px;
+
 						&.active {
 							color: $red;
 							font-weight: 700;
@@ -565,14 +675,22 @@
 				}
 			}
 		}
+
 		.project-grid {
 			display: flex;
 			flex-wrap: wrap;
+			margin: 0 -15px;
+
 			.project-card {
 				flex: 0 0 33.33%;
 				max-width: 33.33%;
+				padding: 0 15px;
+				margin: 0 0 30px;
+
 				.card-inner {
 					position: relative;
+					box-shadow: 0px 0px 30px rgba($black, 0.15);
+
 					.stretched-link {
 						position: absolute;
 						top: 0;
@@ -582,49 +700,59 @@
 						z-index: 2;
 						font-size: 0px;
 					}
+
 					.card-image {
 						overflow: hidden;
+
 						img {
 							width: 100%;
 							@include transition(0.6s);
-							transition-delay: 0.2s;
+							// transition-delay: 0.2s;
 							transform: scale(1);
 						}
 					}
+
 					.card-hover {
-						z-index: 1;
-						position: absolute;
-						left: 30px;
-						top: 30px;
-						background: rgba($white, 0.9);
-						display: flex;
-						align-items: center;
-						justify-content: center;
-						width: calc(100% - 60px);
-						height: calc(100% - 60px);
-						transition: all .3s;
-						opacity: 0;
-						pointer-events: none;
-						visibility: hidden;
-						transform: translateY(30px);
+						// z-index: 1;
+						// position: absolute;
+						// left: 30px;
+						// top: 30px;
+						// background: rgba($white, 0.9);
+						// display: flex;
+						// align-items: center;
+						// justify-content: center;
+						// width: calc(100% - 60px);
+						// height: calc(100% - 60px);
+						// transition: all .3s;
+						// opacity: 0;
+						// pointer-events: none;
+						// visibility: hidden;
+						// transform: translateY(30px);
+						padding: 20px;
+
 						.hover-content {
 							text-align: center;
+
 							h3 {
 								color: $red;
 								line-height: 1.33;
 								font-weight: 700;
 							}
+
 							p {
 								color: $color_text;
+								margin: 0 0 5px;
 							}
 						}
 					}
+
 					&:hover {
 						.card-image {
 							img {
 								transform: scale(1.1);
 							}
 						}
+
 						.card-hover {
 							transform: translateY(0);
 							opacity: 1;
@@ -637,25 +765,31 @@
 		}
 	}
 }
+
 .testimonial-section {
 	padding: 40px 0 80px;
+
 	.testimonial-left {
 		.section-title {
 			margin-left: 0;
 			text-align: left;
+
 			h5 {
 				padding-left: 0;
+
 				&:before {
 					content: none;
 				}
 			}
 		}
 	}
+
 	.testimonial-wrapper {
 		.testimonial-img-slider {
 			width: 315px;
 			margin-right: auto;
 			margin-left: 0;
+
 			.img-holder {
 				position: relative;
 				display: block;
@@ -663,6 +797,7 @@
 				transition: all 500ms ease;
 				width: 92px;
 				cursor: pointer;
+
 				&:before {
 					content: '';
 					position: absolute;
@@ -674,6 +809,7 @@
 					z-index: 1;
 					transition: all 500ms ease;
 				}
+
 				&:after {
 					content: '';
 					position: absolute;
@@ -692,27 +828,33 @@
 					background-repeat: no-repeat;
 					background-position: center center;
 				}
+
 				img {
 					width: 92px;
 					border-radius: 50%;
-					transition: all 0.5s ease-in-out 0.6s;						
+					transition: all 0.5s ease-in-out 0.6s;
 				}
+
 				&.slick-current {
 					&:before {
 						background: rgba(255, 255, 255, 0);
 					}
+
 					&:after {
 						transform: scale(1);
 					}
 				}
 			}
 		}
+
 		.testimonial-slider {
 			.testimonial-block {
 				position: relative;
 				display: block;
+
 				.content {
 					padding-top: 30px;
+
 					p {
 						font-size: 26px;
 						color: $navy_blue;
@@ -721,13 +863,16 @@
 						margin: 0;
 					}
 				}
+
 				.client-info {
 					padding-top: 35px;
+
 					h4 {
 						color: $red;
 						margin: 0;
 						font-weight: 700;
 					}
+
 					span {
 						font-weight: 500;
 						color: $color_text;
@@ -736,13 +881,16 @@
 				}
 			}
 		}
+
 		.slick-dots {
 			position: absolute;
 			bottom: 0;
 			right: 10px;
+
 			li {
 				display: inline-block;
 				margin: 0 0 0 10px;
+
 				button {
 					width: 10px;
 					height: 10px;
@@ -757,6 +905,7 @@
 					border-radius: 50%;
 					padding: 0;
 				}
+
 				&.slick-active {
 					button {
 						background-color: transparent;
@@ -767,9 +916,11 @@
 		}
 	}
 }
+
 .awards-section {
 	// background: rgba($grey, 0.15);
 	overflow: hidden;
+
 	.awards-marquee {
 		&:after {
 			content: '';
@@ -777,13 +928,17 @@
 			clear: both;
 		}
 	}
+
 	.awards-wrapper {
 		display: flex;
-		align-items: center;
+		align-self: stretch;
+
 		.awards-block {
 			padding: 0 10px;
 			height: 140px;
 			width: auto;
+			height: auto;
+
 			.block-inner {
 				display: flex;
 				align-items: center;
@@ -792,11 +947,13 @@
 				background: $white;
 				border: 1px solid #eee;
 				height: 100%;
+
 				img {
-					height: 100%;
+					// height: 100%;
 					mix-blend-mode: multiply;
 					@include transition(0.4s);
 				}
+
 				&:hover {
 					img {
 						mix-blend-mode: luminosity;
@@ -806,29 +963,41 @@
 		}
 	}
 }
+
 .blog-section {
 	padding: 60px 0;
+
 	.section-title {
 		margin-bottom: 45px;
+	}
+	.row {
+		.col-lg-4 {
+			margin: 0 0 40px;
+		}
 	}
 	.blog-card {
 		.card-inner {
 			.card-image {
 				padding: 0 0 20px;
+
 				a {
 					display: block;
 				}
+
 				img {
 					width: 100%;
 				}
 			}
+
 			h5 {
 				text-align: center;
 				width: 90%;
 				margin: 0 auto;
+
 				a {
 					color: #444444;
 					@include transition(0.4s);
+
 					&:hover {
 						color: $red;
 					}
@@ -837,19 +1006,23 @@
 		}
 	}
 }
+
 .home-contact-section {
 	.row {
 		margin: 0;
 		align-self: center;
+
 		.col-lg-7,
 		.col-lg-5 {
 			padding: 0;
 		}
+
 		.contact-left {
 			position: relative;
 			min-height: 450px;
 			height: 100%;
 			padding: 30px;
+
 			&:before {
 				content: '';
 				position: absolute;
@@ -861,9 +1034,11 @@
 				z-index: 0;
 				pointer-events: none;
 			}
+
 			.content-inner {
-				overflow: hidden;	
+				overflow: hidden;
 			}
+
 			.bg-image {
 				position: absolute;
 				top: 0;
@@ -873,17 +1048,20 @@
 				width: 100%;
 				object-fit: cover;
 			}
+
 			ul {
 				position: relative;
 				z-index: 1;
 				display: flex;
 				flex-direction: column;
+
 				li {
 					display: inline-block;
 					padding-bottom: 50px;
 					overflow: hidden;
 					width: 86%;
 					position: relative;
+
 					&:before {
 						content: '';
 						position: absolute;
@@ -893,6 +1071,7 @@
 						top: 0;
 						background: $white;
 					}
+
 					&:after {
 						content: '';
 						position: absolute;
@@ -902,6 +1081,7 @@
 						width: 3px;
 						background: $white;
 					}
+
 					h3 {
 						position: relative;
 						color: $white;
@@ -909,6 +1089,7 @@
 						margin: 0;
 						font-weight: 400;
 						display: inline-block;
+
 						&:before {
 							content: '';
 							position: absolute;
@@ -918,106 +1099,141 @@
 							width: 400%;
 							background: $white;
 						}
+
 						span {
 							color: red;
 							font-size: 32px;
 							font-weight: 500;
 						}
 					}
+
 					&:first-child {
 						&:before {
 							content: none;
 						}
+
 						h3 {
 							&:before {
 								content: none;
 							}
 						}
 					}
+
 					&:last-child {
 						&:after {
 							content: none;
 						}
-					}					
+					}
+
 					&:nth-child(even) {
 						text-align: right;
 						margin-left: auto;
+
 						&:before {
 							left: 0;
 							right: unset;
 						}
+
 						&:after {
 							left: unset;
 							right: calc(14% + 13px);
 						}
+
 						h3 {
 							&:before {
 								left: unset;
 								right: calc(100% + 10px);
-							}							
+							}
 						}
 					}
 				}
 			}
 		}
+
 		.contact-form-right {
 			background-color: $red;
 			height: 100%;
+
 			.form-inner {
 				padding: 30px;
+
 				.row {
 					margin: 0 -15px;
+
 					.col-12 {
 						margin: 0 0 12px;
-					} 
+					}
 				}
-				input, select, textarea, .form-control {
+
+				input,
+				select,
+				textarea,
+				.form-control {
 					color: $white;
 					font-weight: 400;
+
 					&::-webkit-input-placeholder {
 						color: $white;
 					}
+
 					&::-moz-placeholder {
 						color: $white;
 					}
+
 					&:-ms-input-placeholder {
 						color: $white;
 					}
+
 					&:-moz-placeholder {
 						color: $white;
 					}
 				}
+
 				input {
-					&:not([type=submit]),					 {
-						background: transparent;
-					}
-				}
-				select,
-				textarea {
+
+					&:not([type=submit]),
+					{
 					background: transparent;
 				}
-				.input-submit {
-					padding-top: 15px;
-					input {
-						background: $white;
-						border-radius: 3px;
-						color: $red;
-						font-size: 16px;
-						height: auto;
-						padding: 10px 30px;
-						font-family: $font_rubik;
-						font-weight: 500;
-						&:hover {
-							background: $navy_blue;
-							border-color: $navy_blue;
-							color: $white;
-						}
+			}
+
+			select,
+			textarea {
+				background: transparent;
+			}
+
+			select {
+				background-image: url('../../images/arrow-down-white.svg');
+				background-size: 20px;
+				background-position: calc(100% - 10px) 50%;
+				background-repeat: no-repeat;
+			}
+
+			.input-submit {
+				padding-top: 15px;
+
+				input {
+					background: $white;
+					border-radius: 3px;
+					color: $red;
+					font-size: 16px;
+					height: auto;
+					padding: 10px 30px;
+					font-family: $font_rubik;
+					font-weight: 500;
+
+					&:hover {
+						background: $navy_blue;
+						border-color: $navy_blue;
+						color: $white;
 					}
 				}
-				.wpcf7-not-valid-tip {
-					color: $purple;
-				}
+			}
+
+			.wpcf7-not-valid-tip {
+				color: $purple;
 			}
 		}
 	}
+}
 }
