--- a/wp-content/themes/zts-india/resources/scss/main.scss
+++ b/wp-content/themes/zts-india/resources/scss/main.scss
@@ -33,6 +33,7 @@
 @import "pages/homepage";
 @import "pages/services";
 @import "pages/contact";
+@import "pages/portfolio";
 @import "pages/default";
 
 
